# 21cmFAST

./: .bumpversion.cfg  .clang-format  .clang-tidy  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  INSTALLATION.rst  LICENSE  MANIFEST.in  PR-adacs-gpu-base.md  README.rst  agents.md  build_cffi.py  build_cffi.py.cuda  c2r_DIM-856800688_NTHREADS25  c2r_DIM1357050928_NTHREADS50  cffi.py  changethelog.py  check_gpu_usage.md  check_gpu_usage.py  config.yml  development.rst  environment_dev.yml  gpu_test_coeval.py  gpu_test_complete.py  gpu_test_final_working.py  gpu_test_fixed.py  gpu_test_success.py  gpu_test_working.py  import_21cmfast.py  inspect.ipynb  install_custom.py  meson.build  meson.options  (+17 more)
.github/: dependabot.yml  labels.yml  release-drafter.yml
.github/workflows/: base_benchmarks.yml  bencher-archive-closed.yml  check-build.yml  deploy.yaml  fork_pr_benchmarks_run.yml  fork_pr_benchmarks_track.yml  labeler.yml  merge-to-dev.yaml  pr_benchmarks.yml  pre_commit.yaml  publish-to-pypi.yaml  release-draft.yml  run-docs-code.yaml  run-tutorials.yaml  tag-release.yaml  test_build_macos.yaml  test_build_strategies.yaml  test_suite.yaml  test_suite_nointegration.yaml
External_tables/: NeutralFractionPDF_SmallHII.npy  NeutralFractionPDF_SmallHII.out  NeutralFractionsForPDF.npy  NeutralFractionsForPDF.out
ci/: macos-latest-env.yml  test-env.yaml  test-env.yml  ubuntu-latest-env.yml
devel/: 21CMMC.h5  TestFindHalos.py  TestingPy21CMMC.py  cat_test.py  cath_watkinson_example.py  cpu_profiling.md  do_basic_mcmc.ipynb  estimated_mem_usage_plot.py  filter_valgrind.py  find_evolution_memory_leak.py  gpu_profiling.md  mcmc_test.py  memory_leak_test.py  performance.py  prepare_gh_logs_for_diff.py  prepare_log_for_diff.py  simple_mcmc_data.txt  simpler_memleak.py  simulate_mcmc_memory_leak.py  simulate_mcmc_memory_leak_lightcone.py  valgrind-python.supp  valgrind-suppress-all-but-c.supp  visualise_boxes_and_power.ipynb
docs/: BUILD_OPTIONS.md  M_TURN.rst  Makefile  acknowledge.rst  conf.py  contributing.rst  design.rst  developer_install.rst  environment.yaml  index.rst  installation.rst  license.rst  models.rst  notes_for_developers.rst  performance.rst  quickstart.rst  requirements.txt  tutorials.rst  updates_from_v3.rst  usage.rst
docs/faqs/: MCMC_advanced_faq.ipynb  ParameterRanges.rst  construct_cores_and_likelihoods.ipynb  hera127.drift_mod_0.135.npz  index.rst  installation_faq.rst  misc.rst
docs/performance/: performance_global_evolution.py
docs/reference/: index.rst  py21cmfast.rst  py21cmmc.rst
docs/templates/: class.rst  module.rst  module_with_class_decorators.rst
docs/tutorials/: caching.ipynb  cli_usage.rst  (+12 more)
examples/: runconfig_example.yml
joss-paper/: .gitignore  Makefile  apa.csl  joss-paper  latex.template  make-example-plots.py  paper.bib  paper.md
py21cmfast/: c_21cmfast.c
src/: meson.build
src/py21cmfast/: __init__.py  __main__.py  _cfg.py  _logging.py  _memory.py  _templates.py  _utils.py  _version.py  cache_tools.py  cli.py  hooks.py  input_serialization.py  inputs.py  lightconers.py  lightcones.py  management.py  meson.build  outputs.py  photoncons.py  plotting.py  rsds.py  run_templates.py  templates.py  utils.py  wrapper.py  yaml.py
src/py21cmfast/.ipynb_checkpoints/: inputs-checkpoint.py
src/py21cmfast/_data/: __init__.py
src/py21cmfast/drivers/: __init__.py  _global_initialization.py  _param_config.py  coeval.py  composite_field.py  global_evolution.py  integrals.py  lightcone.py  meson.build  param_config.py  single_field.py
src/py21cmfast/io/: __init__.py  caching.py  h5.py
src/py21cmfast/src/: 21cmFAST.h  BrightnessTemperatureBox.c  BrightnessTemperatureBox.h  Constants.c  Constants.h  DeviceConstants.cuh  FindHaloes.c  Find_Haloes.c  GenerateICs.c  Globals.h  HaloBox.c  HaloBox.h  HaloCatalog.c  HaloCatalog.h  HaloField.c  HaloField.cu  HaloField.cuh  HaloField.h  Hawking_Radiation.h  InitialConditions.c  InitialConditions.h  InitialConditions_gpu.cu  InitialConditions_gpu.h  InputParameters.c  InputParameters.h  IonisationBox.c  IonisationBox.cu  IonisationBox.h  IonisationBox_gpu.h  IonisationBox_ws.cu  JSC.h  LuminosityFunction.c  LuminosityFunction.h  MapMass_cpu.c  MapMass_gpu.cu  OutputStructs.h  PerturbField.c  PerturbField.cu  PerturbField.h  PerturbHaloCatalog.c  (+86 more)
src/py21cmfast/src/SandBox/: EDGES.ini  LCDM.ini  OPT.ini  SpinTemperatureBox.c  Tools.py  input.ini  main.py
src/py21cmfast/templates/: Munoz21.toml  Qin20.toml  const-zeta.toml  defaults.toml  fixed-halos.toml  latest-dhalos.toml  latest-discrete.toml  latest-small.toml  latest.toml  manifest.toml  mini-dhalos.toml  mini.toml  minihalos-discrete.toml  minihalos.toml  park19.toml  simple-small.toml  simple.toml  size-gpc.toml  size-medium.toml  size-mini.toml  size-small.toml  size-tiny.toml
src/py21cmfast/wrapper/: CLASS.py  __init__.py  _utils.py  arrays.py  arraystate.py  cfuncs.py  class_interface.py  classy_interface.py  exceptions.py  globals.py  inputs.py  meson.build  outputs.py  photoncons.py  rsd.py  structs.py
tests/: README.md  conftest.py  integration_tests.py  produce_integration_test_data.py  test_c_interpolation_tables.py  test_cache_tools.py  test_caching.py  test_cfuncs.py  test_cinterp.py  test_classy_interface.py  test_cli.py  test_config.py  test_data_exists.py  test_dft.py  test_drivers_coev.py  test_drivers_lc.py  test_exceptions.py  test_filtering.py  test_global_evolution.py  test_global_initialization.py  test_gpu_parity.py  test_halo_sampler.py  test_heat_consistency.py  test_high_level_io.py  test_hmf_integrals.py  test_initial_conditions.py  test_input_serialization.py  test_input_structs.py  test_integration_features.py  test_invariant_dft.c  test_lightconer.py  test_lightcones.py  test_mcmc.py  test_minimize_memory.py  test_output_structs.py  test_param_config.py  test_perturb.py  test_photoncons.py  test_plotting.py  test_ps_consistency.py  (+10 more)
user_data/: config.yml  integration_test_config.yml  runconfig_example.yml
(+268 files in other folders)
