[project]
name="21cmFAST"
dynamic = ["version"]
license="MIT license"
license-files = ["LICENSE"]
description="A semi-numerical cosmological simulation code for the 21cm signal"
# long_description="%s\n%s"
# % (
#     re.compile("^.. start-badges.*^.. end-badges", re.M | re.S).sub(
#         "", _read("README.rst")
#     ),
#     re.sub(":[a-z]+:`~?(.*?)`", r"``\1``", _read("CHANGELOG.rst")),
# )
# long_description_content_type="text/x-rst"
authors=[ {name = "The 21cmFAST coredev team" ,email = "21cmfast.coredev@gmail.com"}]
readme= {file = "README.rst", content-type = "text/x-rst" }
include_package_data=true
requires-python=">=3.10"
classifiers=[
    # complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
]
keywords=["Epoch of Reionization", "Cosmology"]
dependencies=[
    "click",
    "numpy<2",
    "pyyaml",
    "scipy",
    "astropy>=2.0",
    "h5py>=2.8.0",
    "cached_property",
    "matplotlib",
    "bidict",
    "cosmotile>=0.2.0",
    "attrs",
    "ninja",
]

# [tool.setuptools.packages.find]
# where = ["src/py21cmfast"]

[project.optional-dependencies]
tests = [
    "pre-commit",
    "pytest>=5.0",
    "pytest-cov",
    "tox",
    "pytest-remotedata>=0.3.2",
    "powerbox",
    "pytest-plt",
    "questionary",
]
docs = [
    "nbsphinx",
    "numpydoc",
    "sphinx>=1.3",
    "sphinx-rtd-theme",
]
# When the min python version supports PEP 735, this can be simplified 
# as dev = test_req + doc_req again (as it was implemented in setup.py)
dev = [
    "pre-commit",
    "pytest>=5.0",
    "pytest-cov",
    "tox",
    "pytest-remotedata>=0.3.2",
    "powerbox",
    "pytest-plt",
    "questionary",
    "nbsphinx",
    "numpydoc",
    "sphinx>=1.3",
    "sphinx-rtd-theme",
]

# UPDATE THESE
[project.urls]
Homepage="https://github.com/21cmFAST/21cmFAST"
Documentation="https://github.com/21cmFAST/21cmFAST"
Repository="https://github.com/21cmFAST/21cmFAST"
Issues="https://github.com/21cmFAST/21cmFAST"
Changelog="https://github.com/21cmFAST/21cmFAST"

[tool.black]
include = '\.pyi?$'
target-version = ['py39', 'py310', 'py311']
exclude = '''
/(
    \.git
  | \.hg
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[project.scripts]
21cmfast = "py21cmfast.cli:main"

[build-system]
build-backend = 'mesonpy'
requires = ['meson-python']
